IT LOADS OBJECTS!!!!

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,7 @@
                 "-I${workspaceFolder}/include",
                 "-L${workspaceFolder}/lib",
                 "${workspaceFolder}/src/*.cpp",
+                "${workspaceFolder}/src/tiny_obj_loader.cc",
                 "${workspaceFolder}/src/glad.c",
                 "-lglfw3dll",
                 "-o",
