refactored mygl, abstracted blur and ssao
now i can add ssr neatly

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,12 @@
         "array": "cpp",
         "map": "cpp",
         "set": "cpp",
-        "xtree": "cpp"
+        "xtree": "cpp",
+        "charconv": "cpp",
+        "format": "cpp",
+        "mutex": "cpp",
+        "ratio": "cpp",
+        "stop_token": "cpp",
+        "thread": "cpp"
     }
 }
